# task_runner

./: CMakeLists.txt  Readme.md
include/: runner.hpp  task.hpp  ts_queue.hpp
src/: runner.cpp
tests/: basic.cpp  fixed_thr.cpp  manytasks.cpp  mpass2.cpp  multipass.cpp  noop.cpp  simple.cpp  test0.cpp
