cmake_minimum_required(VERSION 3.20)
project(task_runner)
add_library(trunner src/runner.cpp)
include_directories(include)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -Wall -Wextra -pedantic -O3")

add_executable(basic tests/basic.cpp)
add_executable(multipass tests/multipass.cpp)
add_executable(manytasks tests/manytasks.cpp)
target_link_libraries(basic trunner)
target_link_libraries(multipass trunner)
target_link_libraries(manytasks trunner)
